k8s/shoppingapp/common/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shoppingapp-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: app.shoppingapp.com
    http:
      paths:
      - path: /home
        backend:
          serviceName: shoppingapp-home-service
          servicePort: http
      - path: /kids
        backend:
          serviceName: shoppingapp-kids-service
          servicePort: http
      - path: /mens
        backend:
          serviceName: shoppingapp-mens-service
          servicePort: http
      - path: /ladies
        backend:
          serviceName: shoppingapp-ladies-service
          servicePort: http
